# urlharvest-rs

./: .env  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  migrate.sh
cfg/: urlharvest.json
config/: urlharvest.json
migrations/: 20220502110537_urllog.sql  20240322000000_urllog.sql  20260720000000_notify_url_db_changes.sql  20260720000001_drop_url_changed.sql
src/: config.rs  db_util.rs  hash_util.rs  lib.rs  main.rs  meta_util.rs  options.rs  startup.rs  str_util.rs  web_util.rs
static/: theme.css  theme.js  url-actions.js
templates/: 42-teepee.html.tera  42.html.tera  blerp.html.tera  hamfi.html.tera  kädenvääntö.html.tera  networker.html.tera  paskat_urlit.html.tera  search.html.hbs  search_index.html.hbs  search_result_footer.html.hbs  search_result_header.html.hbs  search_result_row.html.hbs  url.html.tera  url2.html.tera
templates2/: 42-teepee.html.tera  networker.html.tera  url.html.tera
