# Cargo.toml

[package]
name = "urlharvest"
version = "1.2.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "URL harvester for IRC irssi logs, no bot"
repository = "https://github.com/sjm42/urlharvest-rs"
readme = "README.md"
keywords = ["irc", "url", "harvest", "irssi", "search"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
chrono = "0"
clap = { version = "4.4", features = ["derive"] }
enum-iterator = "1"
env_logger = "0"
futures = "0"
handlebars = "5"
itertools = "0"
linemux = "0"
log = "0"
regex = "1"
reqwest = { version = "0.11", features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
sqlx = { version = "0.7", features = [
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "sqlite",
] }
tera = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
warp = "0"
webpage = { version = "2", default-features = false }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3

# EOF
