# Cargo.toml

[package]
name = "urlharvest"
version = "1.8.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "URL harvester for IRC irssi logs, no bot"
repository = "https://github.com/sjm42/urlharvest-rs"
readme = "README.md"
keywords = ["irc", "url", "harvest", "irssi", "search"]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
axum = { version = "0", features = ["http1", "json", "macros", "query", "tracing"] }
# axum-macros = "0"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
enum-iterator = "2"
futures = "0"
handlebars = "6"
itertools = "0"
linemux = "0"
regex = "1"
reqwest = { version = "0", features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "trust-dns",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
sqlx = { version = "0", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
] }
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"
webpage = { version = "2", default-features = false }


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
